--- a/qr.html
+++ b/qr.html
@@ -1,165 +1,34 @@
 <!doctype html>
-<html lang="en">
+<html>
 <head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Pari Apology — QR Generator</title>
+<meta charset="utf-8">
+<title>Apology Popup QR</title>
 <style>
-  body { font-family: system-ui, -apple-system, "Segoe UI", Roboto, Arial; background: linear-gradient(180deg,#e6faff,#cbeeff); color:#023241; display:flex; align-items:center; justify-content:center; min-height:100vh; margin:0; padding:20px; }
-  .card { background: white; border-radius:14px; padding:20px; box-shadow: 0 20px 50px rgba(2,28,45,0.08); max-width:520px; width:100%; text-align:center; }
-  h1 { margin:0 0 8px; font-size:20px }
-  p { margin:6px 0 18px; color:#445f6a; font-size:14px }
-  #qrcode { position:relative; display:inline-block; }
-  /* heart overlay */
-  .heart {
-    position:absolute; left:50%; top:50%; transform:translate(-50%,-50%); width:84px; height:84px;
-    border-radius:999px; display:grid; place-items:center; background:#0099FF; box-shadow:0 6px 18px rgba(0,153,255,0.18);
+  body { 
+    font-family: Arial, sans-serif; 
+    background:#f2f7ff; 
+    display:flex; 
+    justify-content:center; 
+    align-items:center; 
+    height:100vh;
   }
-  .heart svg { width:44px; height:44px; filter: drop-shadow(0 4px 8px rgba(0,0,0,0.08)); }
-  .controls { margin-top:14px; display:flex; gap:10px; justify-content:center; }
-  input[type="text"] { padding:10px 12px; border-radius:10px; border:1px solid rgba(2,28,45,0.06); width:100%; max-width:360px; }
-  button { padding:10px 12px; border-radius:10px; border:0; background:linear-gradient(90deg,#02a8ff,#68c9ff); color:white; font-weight:700; cursor:pointer; }
-  button.secondary { background:transparent; color:#023241; border:1px solid rgba(2,28,45,0.06); font-weight:600; }
-  .note { margin-top:12px; color:#4b6b7a; font-size:13px; }
-  /* responsive */
-  @media (max-width:420px){ .heart{width:64px;height:64px} .heart svg{width:34px;height:34px} }
+  .box {
+    background:white;
+    padding:20px;
+    border-radius:12px;
+    box-shadow:0 10px 40px rgba(0,0,0,0.1);
+    text-align:center;
+  }
+  img {
+    width:280px;
+    border-radius:8px;
+  }
 </style>
 </head>
 <body>
-  <div class="card" role="main">
-    <h1>Pari Apology — QR Generator</h1>
-    <p>Scannable QR that opens the apology popup page. Edit the URL and click <strong>Generate</strong>.</p>
-
-    <div style="display:flex;gap:10px;justify-content:center;flex-wrap:wrap">
-      <input id="urlInput" type="text" value="https://zoyv.github.io/Parii-apologypopups/" aria-label="URL for QR"/>
-      <button id="genBtn">Generate</button>
-      <button class="secondary" id="dlBtn">Download PNG</button>
-    </div>
-
-    <div style="margin-top:18px">
-      <div id="qrcode"></div>
-      <!-- heart overlay -->
-      <div class="heart" id="heart">
-        <!-- white heart circle with white heart icon -->
-        <svg viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-          <path d="M12 21s-7.5-4.35-9-6.41C1 11.95 3.09 8 6 7.5 8.2 7.12 10 8.6 10 10.4 10 8.6 11.8 7.12 14 7.5c2.91.5 5 4.45 3 7.09C19.5 16.65 12 21 12 21z"/>
-        </svg>
-      </div>
-    </div>
-
-    <div class="note">Tip: After generating, scan it with your phone camera or long-press to save the image.</div>
-  </div>
-
-  <!-- qrcodejs CDN (small, reliable) -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
-  <script>
-    // default URL (change if desired)
-    const defaultURL = "https://zoyv.github.io/Parii-apologypopups/";
-    const urlInput = document.getElementById('urlInput');
-    const genBtn = document.getElementById('genBtn');
-    const dlBtn = document.getElementById('dlBtn');
-    const qrcodeContainer = document.getElementById('qrcode');
-
-    // helper: remove existing children
-    function clearQ() {
-      while(qrcodeContainer.firstChild) qrcodeContainer.removeChild(qrcodeContainer.firstChild);
-    }
-
-    // create QR with sky-blue modules; use high error correction so central heart can overlap
-    function createQR(url) {
-      clearQ();
-      // QR dimensions via CSS box size are handled by library; we'll render to a canvas to download
-      const q = new QRCode(qrcodeContainer, {
-        text: url,
-        width: 320,
-        height: 320,
-        colorDark: "#0099FF",
-        colorLight: "#ffffff",
-        correctLevel: QRCode.CorrectLevel.H // high correction to tolerate the heart overlay
-      });
-      // position heart overlay center (works because container size fixed)
-      // note: qrcodejs creates a <img> or <canvas> inside, which we will use for download
-      setTimeout(()=>{ // slight delay to ensure element rendered
-        const heart = document.getElementById('heart');
-        const rect = qrcodeContainer.getBoundingClientRect();
-        // center heart
-        heart.style.left = (rect.width/2 - heart.offsetWidth/2) + "px";
-        heart.style.top = (rect.height/2 - heart.offsetHeight/2) + "px";
-      }, 150);
-    }
-
-    // convert displayed QR (canvas or img) to downloadable PNG with heart drawn into it
-    function downloadPNG() {
-      // find img or canvas inside qrcodeContainer
-      const img = qrcodeContainer.querySelector('img');
-      const canvas = qrcodeContainer.querySelector('canvas');
-
-      // choose source element
-      let srcCanvas;
-      if(canvas){
-        // use the canvas directly
-        srcCanvas = canvas;
-      } else if(img){
-        // draw the image onto a new canvas
-        srcCanvas = document.createElement('canvas');
-        srcCanvas.width = img.naturalWidth;
-        srcCanvas.height = img.naturalHeight;
-        const ctx = srcCanvas.getContext('2d');
-        ctx.drawImage(img, 0, 0);
-      } else {
-        alert("Please generate the QR first.");
-        return;
-      }
-
-      // create a new canvas to composite the heart
-      const w = srcCanvas.width, h = srcCanvas.height;
-      const out = document.createElement('canvas');
-      out.width = w; out.height = h;
-      const ctx = out.getContext('2d');
-
-      // draw QR
-      ctx.drawImage(srcCanvas, 0, 0);
-
-      // draw circular blue heart background
-      const heartSize = Math.floor(w * 0.26); // heart occupies ~26% of width
-      const cx = Math.floor(w/2), cy = Math.floor(h/2);
-      ctx.beginPath();
-      ctx.fillStyle = "#0099FF";
-      ctx.arc(cx, cy, heartSize/2, 0, Math.PI*2);
-      ctx.fill();
-
-      // draw white heart path (simple path)
-      ctx.fillStyle = "#ffffff";
-      // scale a simple heart path relative to heartSize
-      const s = heartSize;
-      ctx.beginPath();
-      // path coordinates scaled
-      ctx.moveTo(cx, cy + s*0.12);
-      ctx.bezierCurveTo(cx - s*0.5, cy - s*0.25, cx - s*0.5, cy - s*0.72, cx - s*0.12, cy - s*0.72);
-      ctx.bezierCurveTo(cx, cy - s*0.72, cx + s*0.12, cy - s*0.72, cx + s*0.12, cy - s*0.72);
-      ctx.bezierCurveTo(cx + s*0.5, cy - s*0.72, cx + s*0.5, cy - s*0.25, cx, cy + s*0.12);
-      ctx.closePath();
-      ctx.fill();
-
-      // prompt download
-      const dataUrl = out.toDataURL("image/png");
-      const a = document.createElement('a');
-      a.href = dataUrl;
-      a.download = "parii_apology_qr.png";
-      a.click();
-    }
-
-    // init
-    genBtn.addEventListener('click', ()=>{
-      const u = (urlInput.value||defaultURL).trim();
-      if(!u) return alert("Please enter a URL.");
-      createQR(u);
-    });
-
-    dlBtn.addEventListener('click', downloadPNG);
-
-    // generate initial on load
-    window.addEventListener('load', ()=> createQR(urlInput.value || defaultURL));
-  </script>
+<div class="box">
+  <h2>Scan to Open Pari Apology Popup</h2>
+  <img src="normal_qr.png" alt="QR Code"/>
+</div>
 </body>
 </html>
